--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,10 @@
 streamlit>=1.28.0
 pandas>=2.0.0
 plotly>=5.17.0
-scipy
+streamlit>=1.28.0
+pandas>=2.0.0
+numpy>=1.24.0
+plotly>=5.17.0
+scikit-learn>=1.3.0
+umap-learn>=0.5.0
+scipy>=1.11.0
