--- a/streamlit/secrets.toml
+++ b/streamlit/secrets.toml
@@ -1,1 +1,3 @@
-.streamlit/secrets.toml
+[supabase]
+url = "https://pqkzgypsllkffqnvdsyn.supabase.co"
+key = "sb_secret_Q4fqOVc8AbCIx32c4cKZzg_LBl7sMt6"
